--- a/metadata.yaml
+++ b/metadata.yaml
@@ -31,5 +31,6 @@ subjects:
 - !lcsh 'Theater -- Fiction'
 - !lcc 'PT'
 - !lcsh 'Rome -- Fiction'
+- GITenberg
 title: De komedianten
 url: http://www.gutenberg.org/ebooks/29814
